ロゴのフォント、大きさ、色を変更

--- a/frontend/src/main/resources/html/user/home.html
+++ b/frontend/src/main/resources/html/user/home.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/frontend/src/main/resources/static/user/output.css" />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
@@ -182,7 +183,7 @@
         <!-- TODO:表示メニューの調整 -->
         <nav>
             <ul class="menu bg-orange-200 text-center">
-                <li class="menu-list "><a href="#" class="text-5xl pt-24 pb-2 px-4  block ">ロゴ</a></li>
+                <li class="menu-list"><a href="#" class="text-8xl text-orange-500 pt-24 pb-2 px-4  block font-yusei-magic">ぶんたん</a></li>
                 <li class="menu-list"><a href="#" class="text-5xl py-2 px-4  block hover:text-white">ポイント</a></li>
                 <li class="menu-list"><a href="#" class="text-5xl py-2 px-4 block hover:text-white">タスク管理</a></li>
                 <li class="menu-list"><a href="#" class="text-5xl py-2 px-4 block hover:text-white">グループ管理</a></li>
