--- a/frontend/src/main/resources/html/user/home.html
+++ b/frontend/src/main/resources/html/user/home.html
@@ -183,10 +183,14 @@
         <!-- TODO:表示メニューの調整 -->
         <nav>
             <ul class="menu bg-orange-200 text-center">
-                <li class="menu-list"><a href="#" class="text-9xl text-orange-500 pt-24 pb-2 px-4  block font-yusei-magic">ぶんたん</a></li>
-                <li class="menu-list"><a href="#" class="text-6xl py-2 px-4 mt-20 block hover:text-white">ポイント</a></li>
-                <li class="menu-list"><a href="#" class="text-6xl py-2 px-4 mt-20 block hover:text-white">タスク管理</a></li>
-                <li class="menu-list"><a href="#" class="text-6xl py-2 px-4 mt-20 block hover:text-white">グループ管理</a></li>
+                <li class="menu-list"><a href="#" class="text-9xl text-orange-500 pt-24 pb-2 px-4 mb-8 block font-yusei-magic">ぶんたん</a></li>
+                <li class="menu-list"><a href="#" class="bg-orange-300 text-stone-600 text-6xl py-10 px-4 block hover:text-white">予定管理</a></li>
+                <li class="menu-list"><a href="#" class="bg-orange-100 text-stone-600 text-6xl py-10 px-4 block hover:text-white">ポイント</a></li>
+                <li class="menu-list"><a href="#" class="bg-orange-300 text-stone-600 text-6xl py-10 px-4 block hover:text-white">タスク管理</a></li>
+                <li class="menu-list"><a href="#" class="bg-orange-100 text-stone-600 text-6xl py-10 px-4 block hover:text-white">グループ管理</a></li>
+                <li class="menu-list"><a href="#" class="bg-orange-300 text-stone-600 text-6xl py-10 px-4 block hover:text-white">ご褒美管理</a></li>
+                <li class="menu-list"><a href="#" class="bg-orange-300 text-stone-600 text-6xl py-10 px-4 mt-96 block hover:text-white">設定</a></li>
+                <li class="menu-list"><a href="#" class="bg-red-300 text-stone-600 text-6xl py-10 px-4 block hover:text-white">ロクゥアウト</a></li>
             </ul>
         </nav>
 
