背景色の調整

--- a/frontend/src/main/resources/html/user/home.html
+++ b/frontend/src/main/resources/html/user/home.html
@@ -165,6 +165,14 @@
         .overlay.show {
             display: block;
         }
+
+        .bg-customerized-orange {
+            background-color: #F8E3CB;
+        }
+
+        .bg-customerized-pink {
+            background-color: #FFCCC0;
+        }
     </style>
 </head>
 
@@ -182,15 +190,15 @@
         <!-- メニューオーバーレイ -->
         <!-- TODO:表示メニューの調整 -->
         <nav>
-            <ul class="menu bg-orange-200 text-center">
+            <ul class="menu bg-orange-100 text-center">
                 <li class="menu-list"><a href="#" class="text-9xl text-orange-500 pt-24 pb-2 px-4 mb-8 block font-yusei-magic">ぶんたん</a></li>
-                <li class="menu-list"><a href="#" class="bg-orange-300 text-stone-600 text-6xl py-10 px-4 block hover:text-white">予定管理</a></li>
-                <li class="menu-list"><a href="#" class="bg-orange-100 text-stone-600 text-6xl py-10 px-4 block hover:text-white">ポイント</a></li>
-                <li class="menu-list"><a href="#" class="bg-orange-300 text-stone-600 text-6xl py-10 px-4 block hover:text-white">タスク管理</a></li>
-                <li class="menu-list"><a href="#" class="bg-orange-100 text-stone-600 text-6xl py-10 px-4 block hover:text-white">グループ管理</a></li>
-                <li class="menu-list"><a href="#" class="bg-orange-300 text-stone-600 text-6xl py-10 px-4 block hover:text-white">ご褒美管理</a></li>
-                <li class="menu-list"><a href="#" class="bg-orange-300 text-stone-600 text-6xl py-10 px-4 mt-96 block hover:text-white">設定</a></li>
-                <li class="menu-list"><a href="#" class="bg-red-300 text-stone-600 text-6xl py-10 px-4 block hover:text-white">ロクゥアウト</a></li>
+                <li class="menu-list"><a href="#" class="bg-customerized-orange text-stone-600 text-6xl py-10 px-4 block hover:text-white">予定管理</a></li>
+                <li class="menu-list"><a href="#" class="bg-orange-50 text-stone-600 text-6xl py-10 px-4 block hover:text-white">ポイント</a></li>
+                <li class="menu-list"><a href="#" class="bg-customerized-orange text-stone-600 text-6xl py-10 px-4 block hover:text-white">タスク管理</a></li>
+                <li class="menu-list"><a href="#" class="bg-orange-50 text-stone-600 text-6xl py-10 px-4 block hover:text-white">グループ管理</a></li>
+                <li class="menu-list"><a href="#" class="bg-customerized-orange text-stone-600 text-6xl py-10 px-4 block hover:text-white">ご褒美管理</a></li>
+                <li class="menu-list"><a href="#" class="bg-customerized-orange text-stone-600 text-6xl py-10 px-4 mt-96 block hover:text-white">設定</a></li>
+                <li class="menu-list"><a href="#" class="bg-customerized-pink text-stone-600 text-6xl py-10 px-4 block hover:text-white">ログアウト</a></li>
             </ul>
         </nav>
 
