--- a/frontend/src/main/resources/html/user/home.html
+++ b/frontend/src/main/resources/html/user/home.html
@@ -170,7 +170,7 @@
         }
 
         .bg-customerized-orange {
-            background-color: #F8E3CB;
+            background-color: #FFF2E5;
         }
 
         .bg-customerized-pink {
@@ -179,12 +179,12 @@
     </style>
 </head>
 
-<body class="bg-orange-100 m-0 p-0 box-border font-kiwi-maru"">
+<body class="bg-customerized-orange m-0 p-0 box-border font-kiwi-maru"">
     <!-- グレイレイヤー -->
     <div class="overlay"></div>
 
     <!-- header要素 -->
-    <header class="h-40 bg-orange-100 flex items-center">
+    <header class="h-40 bg-customerized-orange flex items-center">
         <!-- ハンバーガーメニュー -->
         <button type="button" class="btn js-btn">
             <span class="btn-line"></span>
@@ -193,15 +193,29 @@
         <!-- メニューオーバーレイ -->
         <!-- TODO:表示メニューの調整 -->
         <nav>
-            <ul class="menu bg-orange-100 text-center">
-                <li class="menu-list"><a href="#" class="text-9xl text-orange-500 pt-24 pb-2 px-4 mb-32 block font-yusei-magic">ぶんたん</a></li>
-                <li class="menu-list"><a href="#" class="bg-customerized-orange text-stone-600 text-6xl py-10 px-4 block hover:text-white">予定管理</a></li>
-                <li class="menu-list"><a href="#" class="bg-orange-50 text-stone-600 text-6xl py-10 px-4 block hover:text-white">ポイント</a></li>
-                <li class="menu-list"><a href="#" class="bg-customerized-orange text-stone-600 text-6xl py-10 px-4 block hover:text-white">タスク管理</a></li>
-                <li class="menu-list"><a href="#" class="bg-orange-50 text-stone-600 text-6xl py-10 px-4 block hover:text-white">グループ管理</a></li>
-                <li class="menu-list"><a href="#" class="bg-customerized-orange text-stone-600 text-6xl py-10 px-4 block hover:text-white">ご褒美管理</a></li>
-                <li class="menu-list"><a href="#" class="bg-customerized-orange text-stone-600 text-6xl py-10 px-4 mt-96 block hover:text-white">設定</a></li>
-                <li class="menu-list"><a href="#" class="bg-customerized-pink text-stone-600 text-6xl py-10 px-4 block hover:text-white">ログアウト</a></li>
+            <ul class="menu bg-customerized-orange text-left">
+                <li class="menu-list"><a href="#" class="text-9xl text-teal-500 pt-24 pb-2 px-14 mb-32 block font-yusei-magic">ぶんたん</a></li>
+                <li class="menu-list"><a href="#" class=" text-stone-600 text-5xl py-10 px-24 block hover:text-orange-300">
+                   <i class="material-icons text-teal-500 text-5xl">calendar_month</i>
+                    予定管理</a></li>
+                <li class="menu-list"><a href="#" class=" text-stone-600 text-5xl py-10 px-24 block hover:text-orange-300">
+                    <i class="material-icons text-teal-500 text-5xl">new_releases</i>
+                    ポイント</a></li>  
+                <li class="menu-list"><a href="#" class=" text-stone-600 text-5xl py-10 px-24 block hover:text-orange-300">
+                    <i class="material-icons text-teal-500 text-5xl">task</i>
+                    タスク管理</a></li>
+                <li class="menu-list"><a href="#" class=" text-stone-600 text-5xl py-10 px-24 block hover:text-orange-300">
+                    <i class="material-icons text-teal-500 text-5xl">group</i>
+                    グループ管理</a></li>
+                <li class="menu-list"><a href="#" class=" text-stone-600 text-5xl py-10 px-24 block hover:text-orange-300">
+                    <i class="material-icons text-teal-500 text-5xl">local_activity</i>
+                    ご褒美管理</a></li>
+                <li class="menu-list"><a href="#" class=" text-stone-600 text-5xl py-10 px-24 mt-96 block hover:text-orange-300">
+                    <i class="material-icons text-teal-500 text-5xl">settings</i>
+                    設定</a></li>
+                <li class="menu-list"><a href="#" class=" text-stone-600 text-5xl py-10 px-24 block hover:text-orange-300">
+                    <i class="material-icons text-teal-500 text-5xl">logout</i>
+                    ログアウト</a></li>
             </ul>
         </nav>
 
@@ -209,7 +223,7 @@
         <div class="flex justify-center absolute right-3">
             <!-- <img class="w-24 h-24  bg-white rounded-full mr-6 mt-0" src="/frontend/images/alarm.png" alt="alarm" /> -->
              <!-- alarm icon 変更しました -->
-            <span id="noti icons" ><i class="material-icons" style="font-size:87px;color:#707070;">notifications</i></span>
+            <span id="noti icons" ><i class="material-icons text-teal-500 text-8xl py-0 px-2">notifications</i></span>
             <img class="w-24 h-24 bg-white rounded-full" src="/frontend/images/icon.png" alt="icon" />
         </div>
     </header>
@@ -218,10 +232,10 @@
     <main>
         <!-- 今日の予定表示 -->
         <div>
-            <h2 class="text-5xl mt-6 ml-14 text-orange-500">〇月〇日</h2>
+            <h2 class="text-5xl mt-6 ml-14 text-teal-500">〇月〇日</h2>
             <div
-                class="flex-none border-orange-300 bg-orange-200 border-4 mt-5 w-4/5 mr-auto ml-auto h-28 items-center rounded-3xl">
-                <p class="text-3xl m-1 text-orange-600">Tasks today</p>
+                class="flex-none border-orange-200 bg-orange-50 border-4 mt-5 w-4/5 mr-auto ml-auto h-28 items-center rounded-3xl">
+                <p class="text-3xl m-1 text-teal-500">Tasks today</p>
                 <p class="text-4xl ml-4">残り〇個</p>
             </div>
         </div>
